--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
     }
 
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -29,7 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
+    dataBinding {
+        enabled true
+    }
     buildFeatures {
         viewBinding true
     }
@@ -55,5 +58,8 @@ dependencies {
 
     // circle indicator
     implementation 'me.relex:circleindicator:2.1.4'
+
+    //pin View
+    implementation 'io.github.chaosleung:pinview:1.4.4'
 
 }
