--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
     // circle indicator
     implementation 'me.relex:circleindicator:2.1.4'
 
+    //material design
+    implementation 'com.google.android.material:material:1.4.0'
+
+
 }
