--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.iqoldemo">
 
     <application
@@ -10,19 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IQOLDemo">
         <activity
-            android:name=".IntroSlider0Activity2"
-            android:exported="true" />
+            android:name=".settingActivity"
+            android:exported="false" />
         <activity
-            android:name=".InfoActivity2"
-            android:exported="true" />
-        <activity
-            android:name=".customview.InfoActivity"
-            android:exported="true" />
-        <activity
-            android:name=".IntroSlider3Activity"
-            android:exported="true" />
-        <activity
-            android:name=".HomeActivity"
+            android:name=".changeProfileActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,26 +23,52 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".dialogChangPassActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".home2Activity"
+            android:exported="true"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".ReportActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".IntroSlider3Activity"
+            android:exported="true"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable" />
+        <activity
             android:name=".WelcomeToNameApp"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".OnBoardIntroActivity"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".RegisterOTP"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".NameAppActivity"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
     </application>
 
 </manifest>
