--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,5 +84,23 @@ dependencies {
     implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.3.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    // dimen library
+    implementation 'com.intuit.ssp:ssp-android:1.0.5'
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+
+    //view pager 2 library
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    // circle indicator
+    implementation 'me.relex:circleindicator:2.1.4'
+
+
+    //material design
+    implementation 'com.google.android.material:material:1.4.0'
+
+
+    //pin View
+    implementation 'io.github.chaosleung:pinview:1.4.4'
+
 
 }
